--- a/user_inventory/stock.html
+++ b/user_inventory/stock.html
@@ -297,17 +297,6 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 										<div class="kt-portlet__body">
 
-                                            <!--begin: Search Form -->
-											<form class="kt-form kt-form--fit kt-margin-b-10">
-    											<div class="row justify-end">
-													<div class="col-lg-4 col-sm-6">
-	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
-													</div>
-    											</div>
-    										</form>
-
-                                            <!-- end: Search Form -->
-
                                             <table class="table table-striped- table-bordered table-hover table-checkable" id="table_stock"></table>
 
         									<!--end: Datatable -->
@@ -443,7 +432,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Page Vendors -->
 
 		<!--begin::Page Scripts(used by this page) -->
-		<script src="assets/js/script/ajax.js"></script>
+		<script src="assets/js/script/datatable_inventory.js"></script>
 
         <script>
 			$('#kt_sweetalert_berhasil').click(function(e) {
