--- a/user_inventory/stock_detail.html
+++ b/user_inventory/stock_detail.html
@@ -119,14 +119,14 @@ License: You must have a valid license purchased only from themeforest(the above
 										<path d="M11.0563554,18.6706981 L5.33593024,14.122919 C4.94553994,13.8125559 4.37746707,13.8774308 4.06710397,14.2678211 C4.06471678,14.2708238 4.06234874,14.2738418 4.06,14.2768747 L4.06,14.2768747 C3.75257288,14.6738539 3.82516916,15.244888 4.22214834,15.5523151 C4.22358765,15.5534297 4.2250303,15.55454 4.22647627,15.555646 L11.0872776,20.8031356 C11.6250734,21.2144692 12.371757,21.2145375 12.909628,20.8033023 L19.7677785,15.559828 C20.1693192,15.2528257 20.2459576,14.6784381 19.9389553,14.2768974 C19.9376429,14.2751809 19.9363245,14.2734691 19.935,14.2717619 L19.935,14.2717619 C19.6266937,13.8743807 19.0546209,13.8021712 18.6572397,14.1104775 C18.654352,14.112718 18.6514778,14.1149757 18.6486172,14.1172508 L12.9235044,18.6705218 C12.377022,19.1051477 11.6029199,19.1052208 11.0563554,18.6706981 Z" id="Path" fill="#000000" opacity="0.3" />
 									</g>
 								</svg></span><span class="kt-menu__link-text">Dashboard</span></a></li>
-								<li class="kt-menu__item kt-menu__item--active" aria-haspopup="true"><a href="user_inventory/masterData.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item" aria-haspopup="true"><a href="user_inventory/masterData.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
                                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                         <polygon id="Shape" points="0 0 24 0 24 24 0 24"/>
                                         <path d="M4.85714286,1 L11.7364114,1 C12.0910962,1 12.4343066,1.12568431 12.7051108,1.35473959 L17.4686994,5.3839416 C17.8056532,5.66894833 18,6.08787823 18,6.52920201 L18,19.0833333 C18,20.8738751 17.9795521,21 16.1428571,21 L4.85714286,21 C3.02044787,21 3,20.8738751 3,19.0833333 L3,2.91666667 C3,1.12612489 3.02044787,1 4.85714286,1 Z M8,12 C7.44771525,12 7,12.4477153 7,13 C7,13.5522847 7.44771525,14 8,14 L15,14 C15.5522847,14 16,13.5522847 16,13 C16,12.4477153 15.5522847,12 15,12 L8,12 Z M8,16 C7.44771525,16 7,16.4477153 7,17 C7,17.5522847 7.44771525,18 8,18 L11,18 C11.5522847,18 12,17.5522847 12,17 C12,16.4477153 11.5522847,16 11,16 L8,16 Z" id="Combined-Shape-Copy" fill="#000000" fill-rule="nonzero" opacity="0.3"/>
                                         <path d="M6.85714286,3 L14.7364114,3 C15.0910962,3 15.4343066,3.12568431 15.7051108,3.35473959 L20.4686994,7.3839416 C20.8056532,7.66894833 21,8.08787823 21,8.52920201 L21,21.0833333 C21,22.8738751 20.9795521,23 19.1428571,23 L6.85714286,23 C5.02044787,23 5,22.8738751 5,21.0833333 L5,4.91666667 C5,3.12612489 5.02044787,3 6.85714286,3 Z M8,12 C7.44771525,12 7,12.4477153 7,13 C7,13.5522847 7.44771525,14 8,14 L15,14 C15.5522847,14 16,13.5522847 16,13 C16,12.4477153 15.5522847,12 15,12 L8,12 Z M8,16 C7.44771525,16 7,16.4477153 7,17 C7,17.5522847 7.44771525,18 8,18 L11,18 C11.5522847,18 12,17.5522847 12,17 C12,16.4477153 11.5522847,16 11,16 L8,16 Z" id="Combined-Shape" fill="#000000" fill-rule="nonzero"/>
                                     </g>
                                 </svg></span><span class="kt-menu__link-text">Master Data</span></a></li>
-                                <li class="kt-menu__item " aria-haspopup="true"><a href="user_inventory/stock.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+                                <li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_inventory/stock.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 									<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 										<rect id="bound" x="0" y="0" width="24" height="24" />
 										<path d="M4,9.67471899 L10.880262,13.6470401 C10.9543486,13.689814 11.0320333,13.7207107 11.1111111,13.740321 L11.1111111,21.4444444 L4.49070127,17.526473 C4.18655139,17.3464765 4,17.0193034 4,16.6658832 L4,9.67471899 Z M20,9.56911707 L20,16.6658832 C20,17.0193034 19.8134486,17.3464765 19.5092987,17.526473 L12.8888889,21.4444444 L12.8888889,13.6728275 C12.9050191,13.6647696 12.9210067,13.6561758 12.9368301,13.6470401 L20,9.56911707 Z" id="Combined-Shape" fill="#000000" />
@@ -283,6 +283,71 @@ License: You must have a valid license purchased only from themeforest(the above
 
 								<div class="col-12">
 
+									<div class="row">
+
+		                                <div class="col-lg-4 col-sm-6">
+
+		                                    <!--begin::Portlet-->
+		                                    <div class="kt-portlet kt-portlet--height-fluid">
+		                                    	<div class="kt-widget14">
+		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
+		                                    			<h6>
+		                                    				Stok Masuk
+		                                    			</h6>
+		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
+		                                    				<span name="stok_masuk">1200</span><span> Box</span>
+		                                    			</h3>
+		                                    		</div>
+		                                    	</div>
+		                                    </div>
+
+		                                    <!-- end::Portlet -->
+		                                </div>
+
+		                                <div class="col-lg-4 col-sm-6">
+
+		                                    <!--begin::Portlet-->
+		                                    <div class="kt-portlet kt-portlet--height-fluid">
+		                                    	<div class="kt-widget14">
+		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
+		                                    			<h6>
+		                                    				Stok Keluar
+		                                    			</h6>
+		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
+		                                    				<span name="stok_masuk">1200</span><span> Item</span>
+		                                    			</h3>
+		                                    		</div>
+		                                    	</div>
+		                                    </div>
+
+		                                    <!-- end::Portlet -->
+		                                </div>
+
+		                                <div class="col-lg-4 col-sm-6">
+
+		                                    <!--begin::Portlet-->
+		                                    <div class="kt-portlet kt-portlet--height-fluid">
+		                                    	<div class="kt-widget14">
+		                                    		<div class="kt-widget14__header" style="margin-bottom:0px;">
+		                                    			<h6>
+		                                    				Stok Saat Ini
+		                                    			</h6>
+		                                    			<h3 class="kt-widget14__desc kt-margin-t-5 color-main-dark">
+		                                    				<span name="stok_masuk">100</span><span> Box</span>
+		                                    			</h3>
+		                                    		</div>
+		                                    	</div>
+		                                    </div>
+
+		                                    <!-- end::Portlet -->
+		                                </div>
+
+									</div>
+
+								</div>
+
+								<div class="col-12">
+
                                     <!--begin::Portlet-->
 									<div class="kt-portlet">
 										<div class="kt-portlet__head">
@@ -291,16 +356,13 @@ License: You must have a valid license purchased only from themeforest(the above
 													<i class="flaticon2-cube-1"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													Master Data
+													Stock
 												</h3>
-											</div>
-                                            <div class="kt-portlet__head-toolbar">
-												<button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#kt_modal_tambah_barang"><i class="flaticon2-add"></i> Tambah Barang</button>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
 
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_master_data"></table>
+                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_stock_detail"></table>
 
         									<!--end: Datatable -->
 										</div>
@@ -438,17 +500,24 @@ License: You must have a valid license purchased only from themeforest(the above
 		<script src="assets/js/script/datatable_inventory.js"></script>
 
         <script>
-			$('#kt_sweetalert_berhasil').click(function(e) {
+			function swalVoid() {
 				swal.fire({
-					title: "Berhasil",
-					text: "Barang berhasil ditambahkan!",
-					type: "success",
-					confirmButtonText: "Ok",
-					confirmButtonClass: "btn btn-brand"
+					title: 'Tandai sebagai void?',
+					text: "Tindakan ini tidak bisa diubah kembali!",
+					type: 'warning',
+					showCancelButton: true,
+					confirmButtonText: 'Ya, tandai!'
 				}).then(function(result) {
-					// location.reload();
+					if (result.value) {
+						swal.fire(
+							'Ditandai sebagai void!',
+							'Stock telah digolongkan sebagai void.',
+							'success'
+						)
+					}
 				});
-			});
+
+			};
 
 			$("#kt_form_1").validate({
 	            // define validation rules
