--- a/user_inventory/index.html
+++ b/user_inventory/index.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Metronic | Dashboard</title>
+		<title>Dashboard | Inventory Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -257,18 +257,10 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Tabbed Subheader </h3>
+										Dashboard </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="#" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
-										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="" class="kt-subheader__breadcrumbs-link">
-											Subheaders </a>
-										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="" class="kt-subheader__breadcrumbs-link">
-											Classic </a>
-
-										<!-- <span class="kt-subheader__breadcrumbs-link kt-subheader__breadcrumbs-link--active">Active link</span> -->
+										<a href="user_inventory/index.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 									</div>
 								</div>
 							</div>
@@ -279,7 +271,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
-							
+
 
 						</div>
 
