--- a/user_inventory/masterData.html
+++ b/user_inventory/masterData.html
@@ -291,10 +291,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-
                                             <table class="table table-striped- table-bordered table-hover table-checkable" id="table_master_data"></table>
-
-        									<!--end: Datatable -->
 										</div>
 										<div class="kt-portlet__foot kt-hidden">
 											<div class="row">
@@ -322,7 +319,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             </button>
                                         </div>
-                                        <form id="kt_form_1">
+                                        <form id="kt_form_tambah_barang">
                                             <div class="modal-body">
                                                 <div class="form-group row">
                                                     <label for="example-text-input" class="col-4 col-form-label">Nama Barang</label>
@@ -346,6 +343,44 @@ License: You must have a valid license purchased only from themeforest(the above
                                             <div class="modal-footer" style="justify-content:center;">
                                                 <button type="reset" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                                 <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil">Submit</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+
+							<div class="modal fade" id="kt_modal_edit_barang" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Edit Barang</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            </button>
+                                        </div>
+                                        <form id="kt_form_edit_barang">
+                                            <div class="modal-body">
+                                                <div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">Nama Barang</label>
+                                                    <div class="col-8">
+                                                        <input type="text" class="form-control" name="inventory_nama_edit" placeholder="Nama" value="Eyelash Size 12">
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">Satuan</label>
+                                                    <div class="col-8">
+                                                        <input type="text" class="form-control" name="inventory_satuan_edit" placeholder="Satuan" value="Box">
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">Jumlah Per Satuan</label>
+                                                    <div class="col-8">
+                                                        <input type="text" class="form-control" name="inventory_jumlah_satuan_edit" placeholder="Jumlah Per Satuan" value="100 Pcs">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer" style="justify-content:center;">
+                                                <button type="reset" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                                <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil_modal">Submit</button>
                                             </div>
                                         </form>
                                     </div>
@@ -461,7 +496,19 @@ License: You must have a valid license purchased only from themeforest(the above
 				});
 			});
 
-			$("#kt_form_1").validate({
+			$('#kt_sweetalert_berhasil_modal').click(function(e) {
+				swal.fire({
+					title: "Berhasil",
+					text: "Barang berhasil ditambahkan!",
+					type: "success",
+					confirmButtonText: "Ok",
+					confirmButtonClass: "btn btn-brand"
+				}).then(function(result) {
+					// location.reload();
+				});
+			});
+
+			$("#kt_form_tambah_barang").validate({
 	            // define validation rules
 	            rules: {
 	                inventory_nama: {
@@ -471,6 +518,29 @@ License: You must have a valid license purchased only from themeforest(the above
 	                    required: true,
 	                },
 	                inventory_jumlah_satuan: {
+	                    required: true,
+	                    digits: true
+	                }
+	            },
+
+	            invalidHandler: function(event, validator) {
+	                KTUtil.scrollTop();
+	            },
+	            submitHandler: function(form) {
+	                //form[0].submit(); // submit the form
+	            }
+        	});
+
+			$("#kt_form_edit_barang").validate({
+	            // define validation rules
+	            rules: {
+	                inventory_nama_edit: {
+	                    required: true,
+	                },
+	                inventory_satuan_edit: {
+	                    required: true,
+	                },
+	                inventory_jumlah_satuan_edit: {
 	                    required: true,
 	                    digits: true
 	                }
